# roboy_powerlink

./: .gitignore  .gitmodules
communication/: CMakeLists.txt  package.xml
communication/msgs/: MotorCommand.msg  MotorConfig.msg  MotorRecord.msg  MotorRecordConfig.msg  MotorStatus.msg  MotorTrajectoryControl.msg
demo_mn_embedded/: CMakeLists.txt
demo_mn_embedded/src/: app.c  event.c  main.c  main2.c
mn-soc-shmem-gpio2/: board.settings
mn-soc-shmem-gpio2/cmake/: settings.cmake
mn-soc-shmem-gpio2/include/: dualprocshm-mem.h
mn-soc-shmem-gpio2/quartus/: DE10_NANO_SoC_GHRD.qsf  PLLJ_PLLSPE_INFO.txt  de10_nano_soc.qar  de10_nano_soc.qarlog  generate_hps_qsys_header.sh  hps_sdram_p0_summary.csv  map.chg  pll_25MHz.sip  pll_25MHz.spd  pll_25MHz.v  soc_system.qsys
openPowerLink/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  rebuild_all.sh  vivado.jou
openPowerLink/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
openPowerLink/common_utilities/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openPowerLink/stack/: CMakeLists.txt
powerlink/: .project  Demo_3CN.xml
powerlink/deviceConfiguration/: 00000000_POWERLINK_CiA302-4_MN.xdc  00000000_POWERLINK_CiA401_CN_1.xdc
powerlink/output/: ProcessImage.cs  mnobd.cdc  mnobd.txt  mnobd_char.txt  xap.h  xap.xml
protobuf/: myoFPGA.proto
roboy2.0/: .project  roboy2.0.xml
roboy2.0/deviceConfiguration/: 00000000_POWERLINK_CiA302-4_MN.xdc  00000000_POWERLINK_CiA302-4_MN_1.xdc  00000000_POWERLINK_CiA302-4_MN_2.xdc
(+1717 files in other folders)
